# runwasi

./: .dockerignore  .gitignore  .gitmodules  404.html  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  MAINTAINERS  Makefile  NOTICE  README.md  RELEASE.html  RELEASE.md  benchmarks.html  docker-bake.hcl  go.mod  go.sum  hello_wasi_http.wasm  index.html  oci-decision-flow.html  opentelemetry.html  print.html  rust-toolchain.toml  rustfmt.toml  searchindex.js  searchindex.json  test_websearch.sh  toc.html  toc.js  typos.toml  windows-getting-started.html
benches/containerd-shim-benchmarks/: Cargo.toml  README.md
benches/containerd-shim-benchmarks/benches/: wasi-demo-app-benchmarks.rs  wasmedge-benchmarks.rs  wasmtime-benchmarks.rs  webassembly-benchmarks.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/containerd-shim-wamr/: Cargo.toml
crates/containerd-shim-wamr/src/: instance.rs  lib.rs  main.rs  test.rs  tests.rs
crates/containerd-shim-wasm/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/containerd-shim-wasm-test-modules/: Cargo.toml  build.rs
crates/containerd-shim-wasm-test-modules/src/: lib.rs
crates/containerd-shim-wasm-test-modules/src/modules/: README.md  component-hello-world.wasm  custom_entrypoint.wat  exit_code.wat  fetch_rs.rs  fetch_rs.wasm  has_default_devices.rs  hello_wasi_http.wasm  hello_wasi_http_csharp.wasm  hello_world.wat  seccomp.rs  simple_component.wat
crates/containerd-shim-wasm/doc/: doc.md  header.md
crates/containerd-shim-wasm/protos/: sandbox.proto
crates/containerd-shim-wasm/src/: lib.rs  macros.rs  services.rs  testing.rs
crates/containerd-shim-wasm/src/container/: context.rs  engine.rs  executor.rs  instance.rs  log.rs  mod.rs  path.rs  tests.rs  wasm.rs
crates/containerd-shim-wasm/src/containerd/: client.rs
crates/containerd-shim-wasm/src/content/: mod.rs
crates/containerd-shim-wasm/src/libcontainer_instance/: container_executor.rs  instance.rs  mod.rs
crates/containerd-shim-wasm/src/sandbox/: async_utils.rs  cgroups.rs  cli.rs  containerd.rs  context.rs  error.rs  exec.rs  instance.rs  instance_utils.rs  libcontainer_instance.rs  manager.rs  mod.rs  oci.rs  path.rs  shim.rs  stdio.rs  sync.rs  testutil.rs  youki_instance.rs
crates/containerd-shim-wasm/src/sandbox/cgroups/: cgroupv1.rs  cgroupv2.rs  mod.rs
crates/containerd-shim-wasm/src/sandbox/containerd/: client.rs  lease.rs  mod.rs
crates/containerd-shim-wasm/src/sandbox/shim/: cli.rs  events.rs  instance_data.rs  instance_option.rs  local.rs  mod.rs  otel.rs  task_state.rs
crates/containerd-shim-wasm/src/sandbox/shim/local/: tests.rs
crates/containerd-shim-wasm/src/services/: sandbox.rs  sandbox_ttrpc.rs
crates/containerd-shim-wasm/src/shim/: cli.rs  context.rs  log.rs  mod.rs  shim.rs  tests.rs
crates/containerd-shim-wasm/src/sys/: mod.rs  unix.rs  windows.rs
crates/containerd-shim-wasm/src/sys/unix/: metrics.rs  mod.rs  networking.rs  pid_fd.rs  signals.rs  stdio.rs
crates/containerd-shim-wasm/src/sys/unix/container/: container.rs  executor.rs  instance.rs  (+1 more)
crates/containerd-shim-wasm/src/sys/windows/: metrics.rs  mod.rs  networking.rs  signals.rs  stdio.rs
crates/containerd-shim-wasm/src/test/: mod.rs  signals.rs
crates/containerd-shim-wasm/src/wasm_libcontainer/: mod.rs
crates/containerd-shim-wasmedge/: Cargo.toml  build.rs
crates/containerd-shim-wasmedge/src/: engine.rs  executor.rs  instance.rs  instance_linux.rs  instance_windows.rs  lib.rs  main.rs  tests.rs
crates/containerd-shim-wasmedge/src/instance/: instance_linux.rs  instance_windows.rs
crates/containerd-shim-wasmer/: Cargo.toml
crates/containerd-shim-wasmer/src/: executor.rs  instance.rs  instance_linux.rs  instance_windows.rs  lib.rs  main.rs  tests.rs
crates/containerd-shim-wasmer/src/instance/: instance_linux.rs  instance_windows.rs
crates/containerd-shim-wasmtime/: Cargo.toml  README.md  build.rs
crates/containerd-shim-wasmtime-v1/: Cargo.toml  build.rs
crates/containerd-shim-wasmtime-v1/protos/: sandbox.proto
crates/containerd-shim-wasmtime-v1/src/: main.rs
crates/containerd-shim-wasmtime-v1/src/containerd-shim-wasmtimed-v1/: main.rs
crates/containerd-shim-wasmtime-v1/src/containerd-wasmtimed/: main.rs
crates/containerd-shim-wasmtime-v1/src/daemon/: main.rs
crates/containerd-shim-wasmtime-v1/src/sandbox/: error.rs  instance.rs  manager.rs  mod.rs  oci.rs  shim.rs
crates/containerd-shim-wasmtime-v1/src/services/: sandbox.rs  sandbox_ttrpc.rs
crates/containerd-shim-wasmtime/src/: container_executor.rs  engine.rs  error.rs  executor.rs  http_proxy.rs  instance.rs  instance_linux.rs  instance_windows.rs  lib.rs  main.rs  oci_wasmtime.rs  tests.rs
crates/containerd-shim-wasmtime/src/executors/: container.rs  mod.rs  wasi.rs
crates/containerd-shim-wasmtime/src/instance/: instance_linux.rs  instance_windows.rs
crates/containerd-shimkit/: CHANGELOG.md  Cargo.toml  README.md
crates/containerd-shimkit/src/: lib.rs
crates/containerd-shimkit/src/sandbox/: cli.rs  instance.rs  instance_utils.rs  mod.rs  oci.rs  sync.rs
crates/containerd-shimkit/src/sandbox/shim/: local.rs  otel.rs  shim.rs  task_state.rs
crates/containerd-shimkit/src/sys/unix/: metrics.rs  mod.rs
crates/containerd-shimkit/src/sys/windows/: metrics.rs  mod.rs  stdio.rs
crates/oci-tar-builder/: Cargo.toml  README.md
crates/oci-tar-builder/src/: bin.rs  lib.rs
crates/stress-test-c8d/: Cargo.toml  README.md
crates/stress-test-c8d/src/: main.rs
crates/wasi-demo-app/: Cargo.toml  build.rs
crates/wasi-demo-app/.cargo/: config.toml
crates/wasi-demo-app/src/: main.rs
crates/wasmedge/: Cargo.toml
crates/wasmedge/src/: error.rs  instance.rs  lib.rs  oci_utils.rs
examples/html-to-markdown/: Cargo.toml  README.md
examples/html-to-markdown/src/: main.rs
test/oci-tests/: Cargo.toml
test/oci-tests/tests/: devices.rs  seccomp.rs
test/oci-tests/tests/common/: mod.rs
wasmtimeshim-rust/: Cargo.toml
wasmtimeshim-rust/bundle/: config.json
wasmtimeshim-rust/src/: lib.rs  main.rs  sandbox.rs
(+173 files in other folders)
