[workspace]
members = [
    "crates/containerd-shim-wasm",
    "crates/containerd-shim-wasm-test-modules",
    "crates/wasi-demo-app",
    "crates/oci-tar-builder",
    "crates/containerd-shim-wasmedge",
    "crates/containerd-shim-wasmtime",
    "crates/containerd-shim-wasmer",
    "crates/containerd-shim-wamr",
    "crates/stress-test",
    "benches/containerd-shim-benchmarks",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.4.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/containerd/runwasi"
homepage = "https://github.com/containerd/runwasi"

[workspace.dependencies]
anyhow = "1.0"
cap-std = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
containerd-shim = "0.7.4"
containerd-shim-wasm = { path = "crates/containerd-shim-wasm", version = "0.8.0" }
containerd-shim-wasm-test-modules = { path = "crates/containerd-shim-wasm-test-modules", version = "0.4.0"}
oci-tar-builder = { path = "crates/oci-tar-builder", version = "0.4.0" }
crossbeam = { version = "0.8.4", default-features = false }
env_logger = "0.11"
libc = "0.2.168"
libcontainer = { git = "https://github.com/youki-dev/youki.git", default-features = false }
log = "0.4"
nix = "0.29"
oci-spec = { version = "0.7.1", features = ["runtime"] }
protobuf = "=3.2"
serde = "1.0"
serde_json = "1.0"
sha256 = "1.5.0"
tar = "0.4"
tempfile = "3.14"
thiserror = "1.0"
wat = "1.220"
windows-sys = "0.59"
serial_test = "3"
tracing = "0.1"
hyper = "1.5.2"
tokio = { version = "1.41.1", default-features = false }
tokio-util = { version = "0.7", default-features = false }

# wasmtime
wasmtime = { version = "27.0.0", features = ["async"] }
wasmtime-wasi = { version = "27.0.0" }
wasmtime-wasi-http = { version = "27.0.0" }

[profile.release]
panic = "abort"
