[package]
name = "containerd-shim-wasmtimer-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = "0.2"
containerd-shim-protos = "0.1"
wasmtime = "0.33"
anyhow = "1.0"
serde_json = "1.0"
oci-spec = "0.5"
command-fds = "0.2"
serde = "1.0"
thiserror = "1.0"
ttrpc = "0.6"

[patch.crates-io]
"containerd-shim" = { git = "https://github.com/cpuguy83/rust-extensions.git", branch = "shim_grouping" }
