[package]
name = "containerd-shim-wamr"
version = "0.1.0"
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
containerd-shim-wasm = { workspace = true }
log = { workspace = true }

[target.'cfg(unix)'.dependencies]
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk", tag = "v1.1.0" }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
serial_test = { workspace = true }

[[bin]]
name = "containerd-shim-wamr-v1"
path = "src/main.rs"
