[package]
name = "containerd-shim-wasm-test-modules"
description = "Set of WebAssembly modules for testing containerd shims for wasm"
version = "0.4.1"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
lazy_static = "1.5.0"
wat = { workspace = true }
