[package]
name = "containerd-shim-wasmedge"
version = "0.5.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
containerd-shim-wasm = { workspace = true }
log = { workspace = true }

# may need to bump wasmedge version in scripts/setup-windows.sh
wasmedge-sdk = { version = "0.13.2" }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
libc = { workspace = true }
serial_test = { workspace = true }

[features]
default = ["standalone", "static"]
standalone = ["wasmedge-sdk/standalone"]
static = ["wasmedge-sdk/static"]
wasi_nn = ["wasmedge-sdk/wasi_nn"]

[[bin]]
name = "containerd-shim-wasmedge-v1"
path = "src/main.rs"
