[package]
name = "containerd-shim-wasmer"
version = "0.5.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
containerd-shim-wasm = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

# This commit relaxes requirement for `wat` dependency and allows us using  v5.0.1 of wasmer in
# this project. We should switch back to crates.io when v5.0.2 is released.
wasmer = { git = "https://github.com/wasmerio/wasmer.git", rev = "82f4f038923f9d26f5619bf05ae2ae8143c75837" }
wasmer-wasix = { git = "https://github.com/wasmerio/wasmer.git", rev = "82f4f038923f9d26f5619bf05ae2ae8143c75837" }
mio = { version = "1", features = ["net"] }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
serial_test = { workspace = true }

[[bin]]
name = "containerd-shim-wasmer-v1"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = ["mio"] # wasmer depends on mio but the latest version of mio moved features behind a feature flag
