[package]
name = "containerd-shim-wasmtime"
version = "0.5.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
containerd-shim = { workspace = true }
containerd-shim-wasm = { workspace = true, features = ["opentelemetry"] }
log = { workspace = true }
oci-spec = { workspace = true, features = ["runtime"] }
ttrpc = { workspace = true }
sha256 = { workspace = true }

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

# OpenTelemetry dependencies
tokio = { version = "1.38", features = ["rt", "macros"] }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
serial_test = { workspace = true }

[[bin]]
name = "containerd-shim-wasmtime-v1"
path = "src/main.rs"
