[package]
name = "containerd-shim-wasmtime"
version = "0.5.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
containerd-shim-wasm = { workspace = true, features = ["opentelemetry"] }
log = { workspace = true }
hyper = "1.0.1"
tokio = { version = "1.30", features = ["rt"] }

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
serial_test = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }

[[bin]]
name = "containerd-shim-wasmtime-v1"
path = "src/main.rs"
