[package]
name = "containerd-shim-wasmtime"
version = "0.5.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
containerd-shim-wasm = { workspace = true, features = ["opentelemetry"] }
libc = { workspace = true }
log = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true, features = ["signal", "macros"] }
tokio-util = { workspace = true, features = ["rt"] }

wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
serial_test = { workspace = true }
reqwest = { version = "0.12", default-features=false, features = ["blocking"] }

[[bin]]
name = "containerd-shim-wasmtime-v1"
path = "src/main.rs"
