[package]
name = "oci-tar-builder"
version.workspace = true
edition.workspace = true

[dependencies]
tar = { workspace = true }
sha256 = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true, features = ["runtime"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.2", features = ["derive"] }
indexmap = "2.2.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "oci-tar-builder"
path = "src/bin.rs"
