[package]
name = "oci-tar-builder"
description = "Library that can be used to build OCI tar archives"
version = "0.4.0"
edition.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true

[dependencies]
tar = { workspace = true }
sha256 = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true, features = ["runtime"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5.50", features = ["derive"] }
indexmap = "2.9.0"
oci-wasm = { version = "0.3.0", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "oci-tar-builder"
path = "src/bin.rs"
