[package]
name = "wasi-demo-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tar = { version = "0.4", optional = true }
sha256 = { version = "1.1", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }
oci-spec = { version = "0.5", optional = true }
oci-tar-builder = { optional = true, path = "../oci-tar-builder" }
anyhow = { version = "1.0", optional = true }



[features]
default = []
oci-v1-tar = ["default", "tar", "sha256", "log", "env_logger", "oci-spec", "oci-tar-builder", "anyhow"]
